# rest-vs-grpc

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/fastapi-client/: Dockerfile  pyproject.toml
apps/fastapi-client/app/: __init__.py  generator.py  main.py  router.py  schema.py  settings.py
apps/fastapi-client/app/clients/: grpc_client.py  rest_client.py
apps/fastapi-client/tests/: conftest.py  test_grpc_flow.py  test_rest_flow.py
apps/go-server/: Dockerfile  go.mod  go.sum  main.go
apps/go-server/config/: config.go
apps/go-server/grpc/: server.go
apps/go-server/processor/: processor.go  processor_test.go
apps/go-server/rest/: handler.go
apps/go-server/schema/: schema.go
infrastructure/: ecs_fastapi.tf  ecs_go_server.tf  main.tf  outputs.tf  sentry.tf  variables.tf  vpc.tf
proto/gibberish/v1/: gibberish.proto
